--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,15 +10,16 @@
             "args": [
                 "--world-size", "1",
                 "--pretrained", "checkpoints/detr-r50-hicodet.pth",
-                "--output-dir", "checkpoints/hico",
+                "--output-dir", "checkpoints/debug",
                 "--use_insadapter",
                 "--num_classes", "117",
                 "--use_multi_hot",
                 "--file1", "hicodet_pkl_files/union_embeddings_cachemodel_crop_padding_zeros_vitb16.p",
-                "--clip_dir_vit", "checkpoints/pretrained_clip/ViT-B-16.pt"
+                "--clip_dir_vit", "checkpoints/pretrained_clip/ViT-B-16.pt",
+                "--port", "827",
             ],
             "env": {
-                "CUDA_VISIBLE_DEVICES":"3"
+                "CUDA_VISIBLE_DEVICES":"7"
             }
         }
     ]
